# easy-ads

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml
assets/: ideas.txt  style.txt
backend/: main.py
examples/: campaign.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Background3D.jsx  CampaignForm.css  CampaignForm.jsx  ImageGallery.css  ImageGallery.jsx
pipeline/: __init__.py  assets_loader.py  campaign_utils.py  compliance.py  generator.py  reporter.py
